# PureMagic

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  README_transpile.md  build.rs  convert_lss_to_qasm.py  convert_lssp_to_trans.py  generate_rnd_layout.py  lssp.py  requirements.txt  rndcircuit.py  topograph.py  utils.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: README.md
data/all_compiled/: count-gates.sh  dnn_n16.cliffordt.qasm  dnn_n16.qasm  dnn_n51.cliffordt.qasm  dnn_n51.qasm  dnn_n8.cliffordt.qasm  dnn_n8.qasm  hubbard_18.cliffordt.qasm  hubbard_18.qasm  ising_n10.cliffordt.qasm  ising_n10.qasm  ising_n26.cliffordt.qasm  ising_n26.qasm  ising_n42.cliffordt.qasm  ising_n42.qasm  ising_n66.cliffordt.qasm  ising_n66.qasm  ising_n98.cliffordt.qasm  ising_n98.qasm  knn_n129.cliffordt.qasm  knn_n129.qasm  knn_n25.cliffordt.qasm  knn_n25.qasm  qaoa_barabasi_albert_N149_3reps.cliffordt.qasm  qaoa_barabasi_albert_N149_3reps.qasm  qaoa_barabasi_albert_N16_3reps.cliffordt.qasm  qaoa_barabasi_albert_N16_3reps.qasm  qaoa_barabasi_albert_N36_3reps.cliffordt.qasm  qaoa_barabasi_albert_N36_3reps.qasm  qft_N008.cliffordt.qasm  qft_N008.qasm  qft_N016.cliffordt.qasm  qft_N016.qasm  qft_N024.cliffordt.qasm  qft_N024.qasm  qft_N032.cliffordt.qasm  qft_N032.qasm  qft_N040.cliffordt.qasm  qft_N040.qasm  qft_N048.cliffordt.qasm  (+54 more)
data/transpiled/max-weight-0/: dnn_n16.trans  dnn_n51.trans  dnn_n8.trans  hubbard_18.trans  ising_n10.trans  ising_n26.trans  ising_n42.trans  ising_n66.trans  ising_n98.trans  knn_n129.trans  knn_n25.trans  out  qaoa_barabasi_albert_N149_3reps.trans  qaoa_barabasi_albert_N16_3reps.trans  qaoa_barabasi_albert_N36_3reps.trans  qft_N008.trans  qft_N016.trans  qft_N024.trans  qft_N032.trans  qft_N040.trans  qft_N048.trans  qft_N056.trans  qft_N064.trans  qft_N072.trans  qft_N080.trans  qft_N088.trans  qft_N096.trans  qft_N100.trans  qft_n160.trans  qft_n63.trans  qugan_n111.trans  qv_N008_12345.trans  qv_N036_12345.trans  run.sh  square_heisenberg_N100.trans  square_heisenberg_N121.trans  square_heisenberg_N144.trans  square_heisenberg_N16.trans  square_heisenberg_N169.trans  (+9 more)
data_processing/: analyze_wisq.py  circuit_table.py  convert_lss_to_trans.py  dascot_qubit_count.py  flasq_lower_bound.py  plot_all.sh  plot_cultivation_dist.py  plot_efficiency_parallelism.py  plot_efficiency_ratio.py  plot_efficiency_v_cultivation.py  plot_efficiency_v_qubits.py  plot_puremagic.py  plot_timesteps_v_weight.py  plot_timing_v_parallelism.py  scheduling_table.py
rust/: Cargo.toml  README.md
rust/src/: circuit.rs  lib.rs  lssp.rs  pauliproduct.rs  scheduler.rs  topograph.rs  topograph.rs.bak  topograph.rs.bak2  transpile-claude-sonnet.rs  transpile.rs  utils.rs
src/: angle.py  astar.rs  circuit.rs  circuit_stats.rs  compile_circuit.py  cultivation.rs  gen_circuit.rs  greedypath.rs  lssp.py  lssp.rs  mcmc_cultivation.py  node.rs  pauliproduct.py  pauliproduct.rs  puremagic.rs  realcircuit.py  rndcircuit.py  scheduler.py  scheduler.rs  steinertree.rs  tableau.rs  topograph.py  topograph.rs  topograph_plotter.rs  transpile.cpp  transpile.py  transpile.rs  treegraph.rs  utils.hpp  utils.rs
tests/: integration_test.rs
tests/fixtures/: small_4q.trans  tiny.cliffordt.qasm  tiny.trans
(+48 files in other folders)
