[package]
name = "puremagic"
version = "0.1.0"
edition = "2024"
authors = ["shofmeyr@lbl.gov"]
description = "Scheduler for quantum surface codes"

[dependencies]
anyhow = "1.0"
#num = "0.4"
#petgraph = "0.6"
plotters = { version = "0.3.7", features = ["svg_backend"] }
rand_simple = "0.2"
rand = "0.8"
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# Logging and output formatting
log = "0.4"
simple-logging = "2.0"
colored = "2"
# Optional performance improvements
#rayon = "1.7"     # For parallel processing
#dashmap = "5.4"   # For concurrent maps
#parking_lot = "0.12" # More efficient mutexes
# Python bindings
#pyo3 = { version = "0.19", features = ["auto-initialize"] }
#numpy = "0.19"

indexmap = "2.11"

#[dependencies.pyo3-built]
#version = "0.4"

[dev-dependencies]
criterion = "0.5"  # For benchmarking
tempfile = "3.7"   # For temporary test files
pretty_assertions = "1.3" # For better test output

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[[bin]]
name = "transpile"
path = "src/transpile.rs"

[[bin]]
name = "puremagic"
path = "src/puremagic.rs"

[[bin]]
name = "gen_circuit"
path = "src/gen_circuit.rs"

[[bin]]
name = "circuit_stats"
path = "src/circuit_stats.rs"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 3
debug = false

[profile.perf]
inherits = "release"
debug = true
strip = false

[profile.bench]
opt-level = 3
debug = false
lto = true

#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pythonapi)'] }

[features]
default = []
# to enable a feature. Use #[cfg(feature = "somefeature")] in the code before the function or line to enable
#default = ["somefeature"]
#somefeature = []

