[package]
name = "lssp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A quantum circuit transformation tool for Pauli products"

[dependencies]
# Standard error handling
thiserror = "1.0"
anyhow = "1.0"
num = "0.4"
lazy_static = "1.4"

# Command line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Logging and output formatting
log = "0.4"
env_logger = "0.10"
colored = "2.0"

# Optional performance improvements
rayon = "1.7"     # For parallel processing
dashmap = "5.4"   # For concurrent maps
parking_lot = "0.12" # More efficient mutexes

# Python bindings
pyo3 = { version = "0.19", features = ["auto-initialize"] }
numpy = "0.19"

[dependencies.pyo3-built]
version = "0.4"

[dev-dependencies]
criterion = "0.5"  # For benchmarking
tempfile = "3.7"   # For temporary test files
pretty_assertions = "1.3" # For better test output

[[bin]]
name = "transpile"
path = "src/transpile.rs"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pythonapi)'] }

[features]
#default = ["pythonapi"]
default = []
pythonapi = []

